prod/deployment.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: supportservice
spec:
  selector:
    matchLabels:
      app:  supportservice
  replicas: 1
  template:
    metadata:
      labels:
        app:  supportservice
    spec:
      containers:
        - name:  supportservice
          image: registry.gitlab.com/hostingsolutions/support-services:89e4f48b565a4d9d570838d5056e06140d2d4156
          imagePullPolicy: Always
          # command: ["yarn start"]
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
