prod/service.yaml
# ---
kind: Service
apiVersion: v1
metadata:
  name: supportservice
spec:
  type: NodePort
  ports:
      - port: 3000
        targetPort: 3000
        protocol: TCP
  selector:
    app: supportservice
