prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: supportservice
spec:
  rules:
  - host: api.datohost.com
    http:
      paths:
      - path: /supports
        backend:
          serviceName: supportservice
          servicePort: 3000
